@@ -1,5 +1,7 @@
 Development version (next version)
-- (no changes yet since last release)
+- Fixed a bug in the GEMMK=1 kernel (with 2D register tiling) when MWG!=NWG
+- CMake fixes for older versions and for the CUDA backend
+- Added tuned parameters for many devices (see doc/tuning.md)
 
 Version 1.6.2
 - Fix a bug in the pre-processor that would cause issues on Arm GPUs
